--- a/calculator.css
+++ b/calculator.css
@@ -1,7 +1,24 @@
 .title {
+    display: flex;
+    justify-content: center;
     font-size: 45px;
     font-weight: 700;
     font-family: 'Times New Roman', Times, serif;
     font-style: italic;
-    text-align: center;
+}
+.outline {
+    border: rgba(0, 0, 0, 0.836);
+    border-style: solid;
+    height: 400px;
+    width: 300px;
+    margin: auto;
+}
+.display {
+    border: black;
+    border-style: groove;
+    border-radius: 5px;
+    height: 45px;
+    width: 270px;
+    margin-top: 10px;
+    margin-left: 10px;
 }
