--- a/calculator.css
+++ b/calculator.css
@@ -9,7 +9,7 @@
 .outline {
     border: rgba(0, 0, 0, 0.836);
     border-style: solid;
-    height: 350px;
+    height: 340px;
     width: 300px;
     margin: auto;
 }
@@ -21,6 +21,8 @@
     width: 270px;
     margin-top: 10px;
     margin-left: 10px;
+    display: flex;
+    align-items: center;
 }
 .container {
     display: flex;
@@ -36,26 +38,35 @@
 .digits {
     display: flex;
     flex-wrap: wrap;
-    width: 201px;
+    /* width: 201px; */
     justify-content: space-between;
     margin-top: 15px;
     margin-left: 5px;
+    margin-right: 5px;
 }
 .digit {
     width: 64px;
-    /* margin: 1px; */
     padding: 5px;
     margin-top: 5px;
+    height: 32px;
 }
 .zeroes {
     display: flex;
-    flex-wrap: nowrap;
-    width: 201px;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-left: 5px;
-    margin-top: 5px;
+    margin-right: 5px;
 }
 .zero {
-    width: 97px;
+    width: 64px;
     padding: 5px;
+    margin-top: 5px;
+    height: 32px;
+}
+.solution {
+    width: 97%;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 15px;
+    height: 32px;
 }
